Added github pages for deployment.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://api.pexels.com" />
     <link rel="preconnect" href="https://images.pexels.com" />
     <link rel="preconnect" href="https://pexels.com" />
-    <title>PicsArt</title>
+    <title>Masonry Vritualized Photo Grid</title>
+    <meta name="description" content="A masonry virtualized photo grid built with React, TypeScript, and Vite.">
   </head>
   <body>
     <div id="root"></div>
